# Gpotlight

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
app/resources/locale/en-US/: app.toml
app/resources/locale/zh-CN/: app.toml
data/: io.github.gpotlight.Gpotlight.desktop
packaging/: gpotlight.spec
plugins/: README.md  example-web.toml  jetbrains-projects.toml  jetbrains_projects.py  mpris-control.toml  mpris_control.py  vscode-projects.toml  vscode_projects.py
scripts/: build-rpm.sh
src/: app.rs  autostart.rs  config.rs  desktop_entry.rs  i18n.rs  ipc.rs  main.rs  shortcut.rs  theme.rs  tray.rs
src/plugin/: builtin.rs  manifest.rs  mod.rs
src/plugin/builtin/: app_launcher.rs  calculator.rs  mod.rs  system_actions.rs  web_search.rs
src/ui/: mod.rs  settings.rs  spotlight.rs
