[package]
name = "gpotlight"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A GNOME Wayland Spotlight-style launcher written with Rust and GTK4."

[dependencies]
anyhow = "1.0"
adw = { package = "libadwaita", version = "0.9", features = ["v1_9"] }
dirs = "6.0"
gio = "0.22"
glib = "0.22"
gtk = { package = "gtk4", version = "0.11", features = ["v4_14"] }
indexmap = { version = "2.7", features = ["serde"] }
ksni = { version = "0.3", features = ["blocking"] }
open = "5.3"
pinyin = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["portal-shortcuts", "tray"]
portal-shortcuts = []
tray = []
